--- a/charts/opentelemetry-operator/values.yaml
+++ b/charts/opentelemetry-operator/values.yaml
@@ -16,7 +16,7 @@ createNamespace: true
 manager:
   image:
     repository: quay.io/opentelemetry/opentelemetry-operator
-    tag: "v0.29.0"
+    tag: v0.31.0
   resources:
     limits:
       cpu: 100m
@@ -30,7 +30,7 @@ manager:
 kubeRBACProxy:
   image:
     repository: gcr.io/kubebuilder/kube-rbac-proxy
-    tag: "v0.5.0"
+    tag: v0.8.0
 
 ## Admission webhooks make sure only requests with correctly formatted rules will get into the Operator.
 ##
